[project]
name = "kave-py"
version = "0.1.0"
description = "Kave Python SDK — control plane for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.80.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kave"]

[tool.uv]
dev-dependencies = [
    "grpcio-tools>=1.80.0",
]
