[project]
name = "kave-sdk"
version = "0.2.0"
description = "Kave Python SDK - control plane for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.80.0",
    "protobuf>=6.30.0",
]

[project.optional-dependencies]
django = [
    "django>=4.2",
    "djangorestframework>=3.14",
]
otel = [
    "opentelemetry-api>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kave"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "contract: contract tests against the Kave fixture server",
    "integration: integration tests that require a running Kave server",
]
